--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -1,38 +1,3 @@
-<!--
-
-初級
-
-- コンボ: {遠} DR MK/J.HK, 2MP, 弱グライド
-- コンボ: 6HP-HP-HP, Sレオパード, ODホーン
-- コンボ: 2LP/2LK, 2LP, 弱スピン, DR MK
-
-中級:
-
-- 確反コンボ: HP(pc)
-- 確反コンボ: DI(pc)
-- コンボ: 2LP/2LK, 2LP, 弱スピン-Sレオパード
-- コンボ: 2LP/2LK, 2LP, 弱スピン-Sレオパード
-- コンボ: 2LP/2LK, 2LP, 弱スピン-Sマレット
-- コンボ: DR MK/J.HK, 2HP
-- コンボ: DI(壁)
-- 起き攻め: {端} 弱昇竜, 弱リンク: +8
-- 起き攻め: {端} 強昇竜, LK: +4
-- 起き攻め: 弱スピン, DR 2LK/6MK
-- 起き攻め: {端} 前投げ
-
-上級:
-
-- 確反コンボ: MK(pc)
-- 差し返し: 2MP(pc), 弱リンク
-- 起き攻め: {端} 6HP-HP-HP, HP: +5
-- 起き攻め: {端} 弱スピン, 2MK: +5
-- コンボ: 2MK-HK
-- コンボ: 6MK-MK
-- コンボ: 2MP, CR MK
-- コンボ: HP
-
- -->
-
 ## 共通設定
 
 （ダミー設定 > ガード: ランダム）
@@ -40,20 +5,22 @@
 
 ## 初級
 
-### Sレオパードのヒット確認
+### 6HPのヒット確認
 
-- Sレオパード(h)
-  - ODホーン
+- 6HP-HP-HP
+  - 弱リンク-強Sレオパード, ...
+- 6HP(g), ガード
+
+6HPのTC派生は猶予が長いので、まずはどこまで遅らせてもコンボになるか試すところから始めるといい。
+
+### ジャンプ・ラッシュ攻撃のコンボ
+
+- J.HK/DR MK(h)
+  - 2HP, 強スピン, DR 2MP, 中ホーン
     - 弱リンク-強Sレオパード, ...
-    - 弱リンク, 後退
-  - {端} ODホーン, 強昇竜: 端が近いとき
-    - LK, 前投げ
-    - LK, 後退
-  - {端} ODホーン, 弱昇竜: 端が遠いとき
-    - 弱リンク, MK(+3), ...
-- Sレオパード(g), 後退
-
-6HPのヒット確認と一緒に練習するといい。
+- J.HK/DR MK(g)
+  - MK, 2LP, 弱スピン-Sマレット, ...
+  - MK(g), 2LP, ガード
 
 ### インパクト返しのコンボ
 
@@ -61,34 +28,23 @@
 
 - DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, 弱ホーン
   - 弱リンク-強Sレオパード, ...
-  - 弱リンク-強Sレオパード, {DI}, DI(pc), ...
 - {端} DI(pc), ステップ, 2MP, 中スピン-Sハーベスト, 弱昇竜 2回
   - 弱リンク, 後退
 
-### ジャンプ・ラッシュ攻撃のコンボ
+### Sレオパードのヒット確認
 
 （反撃設定 > ダウンリバーサル: ドライブインパクト）
 （反撃設定 > ダウンリバーサル: 何もしない）
 
-- J.HK/DR MK(h)
-  - 2HP, 強スピン, DR 2MP, 中ホーン
+- Sレオパード(h)
+  - ODホーン
     - 弱リンク-強Sレオパード, ...
     - 弱リンク-強Sレオパード, {DI}, DI(pc), ...
-- J.HK/DR MK(g)
-  - MK, 2LP, 弱スピン-Sマレット, ...
-  - MK(g), 2LP, ガード
-
-### 6HPのヒット確認
-
-（反撃設定 > ダウンリバーサル: ドライブインパクト）
-（反撃設定 > ダウンリバーサル: 何もしない）
-
-- 6HP-HP-HP
-  - 弱リンク-強Sレオパード, ...
-  - 弱リンク-強Sレオパード, {DI}, DI(pc), ...
-- 6HP(g), ガード
-
-6HPのTC派生は猶予が長いので、まずはどこまで遅らせてもコンボになるか試すところから始めるといい。
+  - {端} ODホーン, 強昇竜: 端が近いとき
+    - LK, 前投げ, ...
+  - {端} ODホーン, 弱昇竜: 端が遠いとき
+    - 弱リンク, MK(+3), ...
+- Sレオパード(g), 後退
 
 ### Sマレットのヒット確認
 
@@ -100,21 +56,12 @@
 
 弱スピンのコンボと一緒に練習するといい。
 
+## 中級
+
 ### 弱攻撃のヒット確認
 
 - 2LP/2LK, 2LP, 弱スピン-弱リンク, ガード
 - 2LP/2LK(g), 2LP, ガード
-
-### 弱攻撃とSマレットのヒット確認
-
-- 2LP/2LK, 2LP, 弱スピン-弱リンク
-  - Sマレット, 2LP 2回, 弱スピン-Sマレット, ...
-  - Sマレット(g)
-    - 前投げ, ステップ, 後退
-    - 後退
-- 2LP/2LK(g), 2LP, ガード
-
-## 中級
 
 ### 昇竜やSAの確反
 
@@ -128,16 +75,20 @@
 
 端から端まで運ぶ。失敗したらリセット。
 
-### ジャンプ攻撃からのコンボ
+### 遠めのジャンプ・ラッシュ攻撃のコンボ
 
 （反撃設定 > ダウンリバーサル: 無敵技）
 （反撃設定 > ダウンリバーサル: 何もしない）
 
-- J.HP, 2MP, ODグライド-6P, J.HP, ...
-  - {無敵技}, HP(pc), ...: 確反
-- J.HP(g), 2MP, 弱グライド
-  - 弱リンク, 後退
-- J.HP(g), 2MP, 弱グライド(g), ガード
+- J.HP/DR MK(h), 2MP
+  - ODグライド-6P
+    - J.HK, ...
+    - J.HK, {無敵技}, HP(pc), ...: 確反
+- J.HP/DR MK(g), 2MP
+  - 弱グライド(h)-6P
+    - 弱リンク, 後退
+  - 弱グライド(g)
+    - ガード
 
 ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
