--- a/shared/government/政治家.md
+++ b/shared/government/政治家.md
@@ -9,3 +9,5 @@
 それよりも「人権を取り上げるって公言してて怖い」とか、明らかに証拠がある事実を感情に載せて伝えるほうがいい。
 
 政治家が支持者の意見ばかり気にしていると、支持者の発想の中でしか発想できない。
+
+政治家が我々国民の人権を認めないなら、私も政治家の生存権を認めない。
