--- a/shared/management/マネジメント.md
+++ b/shared/management/マネジメント.md
@@ -424,3 +424,5 @@ maintenanceやfinanceも含む。
 マネジメントの目的は「続ける」こと。人生かもしれないし、会社の経営かもしれないけど、続けるためにパフォーマンスを高めて、ファイナンスを考える。
 
 マネジメントにとって資源の配分は手段でしかない。効果を最適化するのがマネジメント。
+
+マネジメントは本番に最も強い瞬間を持ってこないといけない。必死に練習しても故障してはいけないし、故障しなくても弱くてはいけない。
