--- a/shared/society/社会的な性別.md
+++ b/shared/society/社会的な性別.md
@@ -10,3 +10,6 @@ man/woman.
 心理的な性別ではない。社会や他人がどっちだと思うか。自認はどうでもいい。
 
 社会的な性別は、自分がどう思うかではなく、他人がどう思うかで決まるべき。
+
+心に棒があってもいいし、穴があってもいい。
+でもそれで特別扱いされたいと思ってはいけない。
