--- a/shared/study/teaching/授業.md
+++ b/shared/study/teaching/授業.md
@@ -63,3 +63,7 @@ https://cssnite.jp/archives/8tips-lecture-aotasan.pdf
 どの段階で「人に教えられる」と言えるか。
 
 中途半端な知識で教えると生徒が怪我をすることがある。
+
+「わからないことがあったら言って」と言ってもわからないところがわからないと意味がない。
+生徒がどこまでわかっているか把握するのは教師の仕事。
+いっそ「わかったことはまとめてレポートを提出して。それ以外は教え直すから」くらいでもいい。
