--- a/shared/development/tips/発達障害.md
+++ b/shared/development/tips/発達障害.md
@@ -1,3 +1,5 @@
 発達障害というのは、定型発達とは違う発達をしているので定型発達の人に合わせてあげるのが大変ということでしかない。
 
 自分の強みがあって別に合わせなくても生きていけるなら関係ないけど、個性もなくて定型発達の下位互換でしかないなら障害になる。
+
+自分で「発達障害です」って大っぴらに自己紹介する人はキチガイなので離れた方がいい。「私は配慮しないけどあなたは私に配慮してね」と言っている。
