--- a/shared/health/健康.md
+++ b/shared/health/健康.md
@@ -14,3 +14,7 @@ health は力を貸せる状態と言ってもいいかも。
 健康を保てたら次に考えるべきは福祉だ。周りの助けを借りられるようにして、いかに大きなことができるか。
 
 健康には限度がある。一人だけ健康でいても何の助けも借りずにできることは少ない。
+
+「私は器用なほうじゃないから、みんなの倍やるくらいの気持ちだよ。」
+「人の倍できるのは、幸せなことですよ。」
+（『あさひなぐ』）
