--- a/shared/human/being/人生.md
+++ b/shared/human/being/人生.md
@@ -32,3 +32,9 @@ https://x.com/cicada3301_kig/status/1914565545967428076?s=46
 世の中に自分の生きた証を残すには、年上ではなく、年下に何かを与えなければならない。年寄りは自分より早く死ぬ。
 
 ファイナンスよりもまず何をして生きていきたいか。
+
+道にゴールはない。
+
+楽に流されれば芯を失う。
+
+苦、楽、道。
