--- a/study/philosophy/examples/仏教/苦.md
+++ b/study/philosophy/examples/仏教/苦.md
@@ -33,3 +33,10 @@
 退屈は何かを変えないといけないと焦っているのかも。何も変わらないことに不満を抱いている。
 
 メモによってイシューを外に吐き出した状態は、イシューがない状態に近づける。
+
+「口に出すな。
+お前の苦しみは、お前だけのもの。
+簡単に手放すな。
+人に分かってもらおうとするな。
+誰も分かってやれないから。」
+（『あさひなぐ』）
