--- a/games/Street-Fighter/Six/tips/モダンかクラシックか.md
+++ b/games/Street-Fighter/Six/tips/モダンかクラシックか.md
@@ -5,3 +5,6 @@
 
 モダンとクラシックは別のキャラとして考える。
 「クラシックにはこれがあるのに」よりも「モダンだからこの試合が取れた」を増やしていかないといけない。モダンを使うならモダンの強みを全力で生かす。
+
+弱いのにMを避けている人はエンジョイ勢なので、勝てなくてもMを恨むのはお門違い。雑魚がかっこつけてるだけ。
+でもグラマスあたりになると単純に性能が足りなくてCにしている。ほとんどのキャラはCの方が火力も高いし立ち回りも強い。逆に言うとハイマスくらいまではMでも全然いける。このクラスになるとMを恨む人はいない。Cの方が強いと思ってやってる。
