--- a/shared/art/technique/技術の巧拙.md
+++ b/shared/art/technique/技術の巧拙.md
@@ -19,5 +19,10 @@
 - 知らないことを調べるのも早い
 - 提案が暗黙的な要望に合っている
 - なんでもやってくれる
+- 再現性がある
 
 https://qiita.com/prum_azuma/items/5866c667155c146d1574
+
+巧拙の基準の一つとして再現性がある。
+歌だったら何度歌っても同じ曲を同じように歌えること。音程やリズム、声質、など。その上で狙ったところだけ変えられるコントロールの精度が高いとなお良い。
+野球だったら、素振りだと同じスイングなら同じ速度で同じ軌道で振れることだったり、ピッチングで同じ場所に同じ速度で投げられるとか。
