--- a/shared/health/tips/経口補水液の作り方.md
+++ b/shared/health/tips/経口補水液の作り方.md
@@ -5,3 +5,6 @@
 https://www.nissin-sugar.co.jp/sugarlab/secret/07/
 
 果汁とか入れて香り付けしても飲みやすい。
+
+https://www.msn.com/ja-jp/health/other/%E7%B5%8C%E5%8F%A3%E8%A3%9C%E6%B0%B4%E6%B6%B2%E3%82%92%E6%99%AE%E6%AE%B5%E4%BD%BF%E3%81%84%E3%81%97%E3%81%AA%E3%81%84%E3%81%A7-%E6%B6%88%E8%B2%BB%E8%80%85%E5%BA%81%E3%81%8C%E6%B3%A8%E6%84%8F%E5%91%BC%E3%81%B3%E3%81%8B%E3%81%91/vi-AA1JpOuC?ocid=socialshare
+経口補水液はミネラルが多すぎるので、普段から飲むとむしろ心臓や血圧に問題が出やすい。あくまでも脱水症状の時に飲む。
