--- a/shared/society/issues/社会問題.md
+++ b/shared/society/issues/社会問題.md
@@ -6,3 +6,12 @@
 数学や科学なんかもむしろ検証の方が面白い部分なのに軽視されていると思う。予算や期間の問題もあるのだろうけど。
 
 最近の若い子は Z 世代とか括られて揶揄されてるけど、「空気が読めない人」ではなく、「無責任な先輩が後回しにしてきた問題に対処する人」でしかない。
+
+食品ロスって何が問題？
+
+一番はゴミ処理の問題。日本はエネルギー資源が弱いので燃やすのも一苦労。バイオマスなど別の処理方法が模索されている。
+ゴミ処理場の処理能力の問題もある。東京などはまだ大丈夫。
+農家の機会損失の問題もある。捨てられる食品は安くなりがち。ただ、そこまで予測して収穫量を調整するのがそもそも現実的ではない。
+企業の購入コストの問題もあるけど、社会の問題ではないし、購入量を契約して割引なんかもあるので単純ではない。
+
+逆に、農家にとってはどんどん消費してもらった方がいい。現代ではむしろ作りすぎてるくらい。特に足が速い生野菜などは早く消費しないといけない。
