--- a/shared/society/tips/差別と偏見.md
+++ b/shared/society/tips/差別と偏見.md
@@ -44,3 +44,6 @@
 人間は差別が大好きなので、「差別がダメ」と主張するのは現実的じゃない。
 
 リベラル的なLGBTとか反差別みたいな平等主義のことをWokeと呼ぶ。「目覚めた」という意味。
+
+差別とは一般名詞をつけることだ。
+しかし、一般名詞をつけずに何かを見ることなんてできるだろうか？
