--- a/shared/voice/training/ボイストレーニングの方針.md
+++ b/shared/voice/training/ボイストレーニングの方針.md
@@ -22,15 +22,17 @@ https://youtu.be/ZdlqRMIBaAs?si=7uWQCX0GAzQv-Zc2
 - 雑音を減らす
 - 抑揚をつける
   - 単調な声を出せる
-  - より大きな声を出せる
-  - より小さな声を出せる
-  - より高い声を出せる
-  - より低い声を出せる
+  - 響きを変えずにより大きな声を出せる
+  - 響きを変えずにより小さな声を出せる
+  - 響きを変えずにより高い声を出せる
+  - 響きを変えずにより低い声を出せる
   - 声色を使い分けられる
     - 柔らかい、優しい声を出せる
     - 硬い声を出せる
     - 重い、暗い声を出せる
     - 軽い、明るい声を出せる
+    - 苦しそうな声を出せる
+    - 楽しそうな声を出せる
 - より長く声を出せる
 - 息を隠せる
 - より短く息を吸える
