--- a/shared/choice/frameworks/無作為に選ぶ.md
+++ b/shared/choice/frameworks/無作為に選ぶ.md
@@ -7,3 +7,9 @@
 なんであれ決まったことに従う。
 
 サイコロ、くじ引き、あみだくじ、ルーレット、などを用いる。
+
+作為的な選択は、癒着や汚職、偽装工作、などの温床になりやすい。
+行政や統計の仕組みとしてあえて無作為抽出を挟むことがよくある。
+
+一律に扱っていいものでないと無作為に扱うのは難しい。
+例えば研究予算の振り分けなんかは研究によって結果を出す前にかかる費用も全然違うからくじ引きで振り分けるわけにもいかないし、一口100万円をくじ引きで取り合うとかでもその研究が詐欺でないか判別するにはなんらかの成果を規定しないといけなくてまた差が出てしまう。
