--- a/shared/decision/判断.md
+++ b/shared/decision/判断.md
@@ -1,3 +1,7 @@
+# Action
+
+行動を選ぶこと。
+
 判断には行動が伴わなければならない。
 
 行動を決めて、行う、あるいはあえて何もしないのが判断。
@@ -92,3 +96,6 @@ Know 知る
 「選択肢というのは必ずしも分かれ道の直前にあるものではないのでしょう」『異世界居酒屋のぶ』
 
 分かれ道のもっと前の判断によって、結果が決まってしまうこともある。
+
+判断を先延ばしにしたままなんとなく行動するのも間違っている。
+判断＝行動の良し悪しを後から検証できるようにする。結果ではなく、期待値で。
