--- a/shared/success/成功の種類.md
+++ b/shared/success/成功の種類.md
@@ -5,3 +5,8 @@
 「幸福」は健康や福祉の面で成功する。人間的。
 
 「達成」は満足とも近いけど、過程に拘らず成果が出ることを重視する。
+
+個人的な成功と社会的な成功がある。
+個人的な成功は幸福のことだけど、社会的な成功は社会にどれだけ影響を与えるかで決まる。
+結婚や友人付き合いのような小さな影響もあるし、新たな製品を送り出したり政治的に影響を与えたりすることもある。
+資産は社会的な影響を与えるポテンシャルがあるけど、それ自体が社会的成功を示すものではない。その資産で何をするかが重要。まぁ、製品が売れた結果として資産になる場合はある。
