--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -320,3 +320,9 @@ experienceとpractice自体はもっと一般的な文脈でいいかも。
 
 学習はどこかで切り上げて、あとはとにかく練習しないといけない段階がある。
 でもまずは学習から。良い方法が分かってないのに練習しても良くならない。
+
+訓練と試練の繰り返しで進めることが多い。
+練習は訓練の方だけど、試練がないと訓練の成果がわからない。
+
+Trainingは特に技術や操作を鍛える面が強い。
+Practiceは反復練習や実践のこと。
