--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -31,6 +31,12 @@
 - 2LP, 弱スピン/CR 2LP
 - MK-HK, ホーン/CR HP
 
+## ゲージの使い方
+
+Dゲージ1本のコンボは積極的に使う。
+
+SAは3よりも2に回してヒーリングする。
+
 ## 2LP
 
 - 2LP 2回, 2LP/LK, 強昇竜: 1590
