--- a/shared/achievement/principles/完璧よりも完成.md
+++ b/shared/achievement/principles/完璧よりも完成.md
@@ -5,4 +5,6 @@
 
 拙く、完璧でなくても、まずは成果を出すことが重要。
 
-完璧を目指すのは難しいが、完璧はある。しかし、手間がかかりすぎてビジネスにはならない。まぁ、どっちみち完璧を目指すにはその前段階を経由する必要がある。
+ビジネスとしては、完璧に近づきすぎると手間がかかりすぎる。まぁ、どっちみち完璧を目指すにはその前段階を経由する必要がある。
+
+完璧はないが、限りなく近づくことはできる。完璧に近づく努力自体を否定してはいけない。
