--- a/shared/collaboration/organization/hierarchy/上司の仕事.md
+++ b/shared/collaboration/organization/hierarchy/上司の仕事.md
@@ -88,3 +88,7 @@
 
 上司は普段動かなくても部下だけで仕事を回せるようにしないといけない。その上で、緊急時だけは手を出す。
 上司の仕事は成果を出すことで、特に楽にそれができるほど優秀。普段暇で、緊急事態も少ないのが最良。
+
+自分でメンタルケアできない部下は要らないから前線で使い潰した方がいいけど、世間体が悪い。できれば初めから採用しない方がいい。とはいえ技能の一種として考えると他の技能も含めてどこまで許容するかは上司次第。
+
+上司にも得意不得意があるので、メンタルケアが強い上司にはメンタルがカスの部下をつけるとか、適性に合わせないといけない。
