--- a/shared/government/democracy/代議士.md
+++ b/shared/government/democracy/代議士.md
@@ -12,3 +12,6 @@
 たくさんのウンコの中でマシなウンコを探すのが選挙。
 
 票に格差があるので、投票もそもそも賄賂だ。年寄り向けの政策を取るのは年寄りから賄賂をもらっているのと同じ。賄賂にいちいち食ってかかるのは合理的ではない。
+
+国民は経済や外交のプロではない。
+なぜ助けてほしいのかは意見を聞いても、方法は専門家を頼るべき。
