--- a/shared/music/theory/rhythm/リズム.md
+++ b/shared/music/theory/rhythm/リズム.md
@@ -75,3 +75,5 @@ https://youtube.com/watch?v=SsyijRvm7Qo&si=KBYmrf4gJKDeNvXK
 
 ビートの重さの違い。本来のリズムに対して入りが遅いと「重い」という。
 https://youtube.com/shorts/yS5BJeNc4Ag?si=bdOxnJITuJUFaPbD
+
+リズムの基本は韻を踏むというか、同じパターンを繰り返すこと。アクセントのタイミングや発音なんかを近づけた方がいい。
