--- a/shared/commerce/顧客主義.md
+++ b/shared/commerce/顧客主義.md
@@ -5,3 +5,5 @@
 顧客第一主義は、どんな製品であっても、顧客に受け入れられた製品に価値がある、という考え方。
 
 顧客第一主義を目指す場合、内部でごちゃごちゃ議論するのではなくて、早くリリースして検証しないと顧客に受け入れられたかどうかわからない。
+
+顧客がどうして助けてほしいかは聞いても、どうやって助けるべきかは専門家が考えないといけない。顧客は解決のプロではない。
