--- a/shared/government/democracy/政党.md
+++ b/shared/government/democracy/政党.md
@@ -11,3 +11,6 @@
 賛成党や保守党は反科学のスピリチュアル政党でしかも帝国制を指向しているので論外。
 
 自民党と公明党は30年の停滞期を作った戦犯なので論外。
+
+参政党の「日本人ファースト」が躍進したのは、与党、というか立憲なども含めた既存政党がそれすらできてないと思われてるから。
+まぁ、そもそも立憲や共産みたいなリベラルは誰の味方でもないコウモリだし、自公は米中の犬だし。
