--- a/shared/government/democracy/民主政.md
+++ b/shared/government/democracy/民主政.md
@@ -1,1 +1,5 @@
-衆愚政治は、馬鹿な有権者を見捨てることで生じる。
+衆愚政治は、馬鹿な有権者を見捨てることで生じる。人間はそもそも愚かだ。
+
+民主政には、愚かな人間の意思決定を遅延させる効果があるし、ないといけない。仕組みによって意思決定を遅延させる。意思決定が遅延されるほど正しい意思決定に修正される可能性が高い。
+
+意思決定を遅延するのが民主政の役割だ。
