--- a/shared/people/人間.md
+++ b/shared/people/人間.md
@@ -34,3 +34,7 @@
 常識を学ぶ必要があるのは、周りから人として扱ってもらうために必要だからだ。
 
 人間は愚か。暴力によって人間から自らを守らなければならない。
+
+人間は複雑だ。
+
+人間は愚か。政治がうまくいかないのは特定の政党や政治家のせいではない。根本的に人間が愚かだからだ。
