--- a/shared/trust/警戒をとく.md
+++ b/shared/trust/警戒をとく.md
@@ -111,3 +111,9 @@ https://diamond.jp/articles/-/118539
 毛繕いや内容のない会話は害がないことを示すために行なっている。ボノボはオス同士でケツを差し出すこともある。
 
 敵とか味方とか区別してない人にとっては味方を示すための毛繕いって時間の無駄なんだよな。
+
+自分から積極的に相手を受け入れる姿勢を示す。安心させる。基本は挨拶と笑顔だけど、言動からも拒絶の意思は伝わってしまう。
+
+そもそも人間を信用してない、警戒している人は信頼を示すのが難しい。細かい態度から警戒が伝わってしまう。根本的な人間不信を隠すのは難しい。
+
+人間不信なのにホストとかにハマる人は人間嫌いではないのだろう。
