--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -115,3 +115,10 @@ Lose-WinをLose-Loseに持ち込む。
 周囲の戦場が自分の戦場に与える影響を考える。
 
 戦うのなら必ず勝たなければならない。引き分けも許されない。
+
+戦いというのは起こるもので、自分が戦わないと決めても起こるときは起こる。
+いざとなったら戦うなり逃げるなりして生き残らないといけないし、戦いに備えておかないといけない。
+
+「勝てなきゃ、死ぬ…。勝てば…生きる。」
+「戦わなければ、勝てない。戦え。戦え。」
+『進撃の巨人』
