--- a/shared/music/vocal/training/tips/ミックスボイスは気にしない.md
+++ b/shared/music/vocal/training/tips/ミックスボイスは気にしない.md
@@ -9,3 +9,7 @@
 いわゆるミックスボイスは声帯を硬くして無理やり高い声を出しているだけなので、練習しない方がいい。まずは地声で声帯をしっかり伸ばして柔らかくて高い声を出せるようにする。
 
 いわゆるミックスボイスは地声や裏声の声色を変えただけとか、息漏れの量を変えるとか、定義がぶれていて意味がない。
+
+本来は地声で柔らかく高い声を出すべき。
+ただ、凡人がそうしても裏返るので、初めから息をある程度漏らして裏返して響きを揃えるのがいわゆるミックスボイス。はっきり言えば妥協でしかない。
+どうせ練習するならミックスボイスではなく地声の範囲をただ広げれば良い。声帯を伸ばして、強い呼吸で歌う。
