--- a/shared/music/vocal/歌.md
+++ b/shared/music/vocal/歌.md
@@ -160,3 +160,4 @@ https://www.youtube.com/watch?v=KCqSzqBT0ik
 昭和歌謡とか声が良すぎて凡人が歌ってもあまり決まらないし。
 
 昭和の歌は本当に天才のものだったけど、平成や令和の歌は凡才でも歌える。良くも悪くも。
+少年時代なんかは伴奏がシンプルすぎて歌唱力がもろに出てしまう。
