--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -50,3 +50,5 @@
 歌いやすい曲をリストアップしておいて最初に歌う。
 
 息を強めて高い音を出すところでも喉を締めるのではなく、腹で息を強くする。最悪胸式呼吸でもいい。
+
+地声で高い声を出そうとすると軟口蓋が下がって重く暗い声になりがち。喉を下げても軟口蓋は上げたほうがいい。
