--- a/shared/voice/声色.md
+++ b/shared/voice/声色.md
@@ -80,3 +80,5 @@ https://www.venusinfurbroadway.com/narrater/column/pos698/
 強い言葉をあえて可愛い声で歌うのは可愛い声でしかできない。才能。
 
 W/X/Yみたいに口先で出すようなぴよぴよした声で歌う曲も最近よくある。
+
+基本の柔らかくて綺麗な声がより綺麗に出せるほど、それ以外の声色も際立つ。
