--- a/shared/art/技術.md
+++ b/shared/art/技術.md
@@ -145,3 +145,5 @@ engineeringは理論的。
 
 初めからなんでもできるのを求めるとキリがないので、まずはやるべきことを絞る。
 求人でもそうだし、自分の訓練でもそう。
+
+逆に、怪我や病気、寿命で、できていたことができなくなった時に許せるかどうか。それにもまた対応しないといけない。
