--- a/study/politics/正義.md
+++ b/study/politics/正義.md
@@ -7,3 +7,9 @@
 正義は常に権力と敵対しなければならない。
 
 それぞれの正義があるが、より強い正義でなければ権力と対抗できない。
+
+デモ活動しているのが中国のスパイだったとしても、それはそれで正義のために活動している。日本のためでなく中国のためではあるが、自分たちの正義に従っている。
+
+権利が必要な人にとっては、それを否定する正義は敵である。正義であっても敵。
+
+正義の敵は別の正義でしかない。
