--- a/games/Street-Fighter/Six/practice/守りの練習メニュー.md
+++ b/games/Street-Fighter/Six/practice/守りの練習メニュー.md
@@ -80,3 +80,15 @@
 
 端を背負った状況で投げにバクステして、弱攻撃がパニカンになるようにコンボする。
 できれば位置入れ替えか、相手を大きく吹っ飛ばすコンボを練習する。
+
+## ラッシュに割り込む練習
+
+以下をレコードする。
+
+- 垂直ジャンプ, DR 小パン, ガード
+- 垂直ジャンプ, 中足, CR 小パン, ガード: 連続ガードにする
+- 垂直ジャンプ, 中足, CR 中パン, ガード: 連続ガードにしない
+
+自分はガードしておいて、ラッシュに無敵技を合わせる。
+連続ガードの時には漏れないようにする。
+DRには通常技で割り込めると尚良い。
