--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -19,7 +19,7 @@
   - 2HP, 強スピン, DR 2MP, 中ホーン
     - 弱リンク-強Sレオパード, ...
 - J.HK/DR MK(g)
-  - MK, 2LP, 弱スピン-Sマレット, ...
+  - MK, 2LP, 弱スピン, DR MK, ...
   - MK(g), 2LP, ガード
 
 ### インパクト返しのコンボ
@@ -40,10 +40,6 @@
   - ODホーン
     - 弱リンク-強Sレオパード, ...
     - 弱リンク-強Sレオパード, {DI}, DI(pc), ...
-  - {端} ODホーン, 強昇竜: 端が近いとき
-    - LK, 前投げ, ...
-  - {端} ODホーン, 弱昇竜: 端が遠いとき
-    - 弱リンク, MK(+3), ...
 - Sレオパード(g), 後退
 
 ### Sマレットのヒット確認
