--- a/shared/engagement/praise/褒められる.md
+++ b/shared/engagement/praise/褒められる.md
@@ -2,3 +2,6 @@
 
 褒められたら、大きなリアクションで受け取る。
 https://youtu.be/EOIQlVc95uI?si=RMSPd8iTKHherdPZ
+
+褒められたら否定しない。
+例えば「よくできた」と褒められたら「いえ、まだまだです」ではなく、「ありがとうございます、でももっと精進します」でいい。
