--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -471,8 +471,8 @@ MKは近くないと当たらない。
 - {端} HP(pc)-HP, 弱ホーン, 強昇竜: 3480
 - HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン: 3689
 - {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, 中昇竜: 4149 25F
-- {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, 弱昇竜: 4081 36F
-- {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱昇竜, 弱昇竜: 3945 36F
+- {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜 2回: 4081 36F
+- {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱昇竜 2回: 3945 36F
 - {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 弱昇竜: 3897 36F
 - {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱昇竜, OD昇竜: 4285 25F
 - HP(pc)-HP, SA1, 強昇竜: 3720
