--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -100,20 +100,22 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 ### キャンセルラッシュの展開
 
-- 2MP, CR MK, 2HP, 強スピン
+- 2MP/MK, CR MK, 2HP, 強スピン
   - 中ホーン
     - 弱リンク, 後退
     - 弱リンク-Sレオパード, ...
   - {端} 弱ホーン, 強昇竜
     - LK, 前投げ/後退
-- 2MP(g), CR MK, MK, 弱グライド, ...
+- 2MP/MK(g), CR MK: 連続ガード
+  - MK(h), 2LP, 弱スピン, ...
+  - MK(g), ガード
 
 ### HPのヒット確認
 
 （ガード切り替え: しゃがみガードのみ）
 （ガードリバーサル: しゃがみ4F技）
 
-- HP-HP, ODホーン
+- HP(h)-HP, ODホーン
   - 強リンク-マレット, 2LP, 2LP, 弱スピン, 弱リンク, 後退
   - {端} 強昇竜, ...
 - HP(g), ガード
@@ -173,8 +175,6 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 まずは2LP, HPルートが基本で、カウンター確認できた時だけMK-HKにする。
 最悪、カウンターでもHPなら届くのでHPでいい。
-
- <!-- ---- この辺りから優先度検討中 ---- -->
 
 ### 弱攻撃からのスピンキャンセルを使った攻め
 
