--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -54,11 +54,6 @@
 
 ## 中級
 
-### 弱攻撃のヒット確認
-
-- 2LP/2LK, 2LP, 弱スピン-弱リンク, ガード
-- 2LP/2LK(g), 2LP, ガード
-
 ### 昇竜やSAの確反
 
 （確定反撃の練習）
@@ -122,11 +117,21 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 相手がしゃがみガードから4F技を出すと割り込めるので、ガードされているのにHP-HPを出したらわかる。
 
+### 端の前投げからの攻め
+
+- {端} 前投げ, ステップ, MK, 弱グライド(h)-6P
+- {端} 前投げ, ステップ, MK, 弱グライド(g), ガード
+- {端} 前投げ, ステップ, ガード
+
 ### 端の柔道
 
 （反撃設定 > ダウンリバーサル: 4F技）
 
 - {端} 前投げ, DR 前投げ, ...
+- {端} 前投げ, DR 2LK, ガード
+
+4F技で割り込まれないように前投げを重ねる。
+難しかったらまずは6Fくらいの技で練習してもいい。
 
 ## 上級
 
@@ -346,7 +351,7 @@ DR 6MPは相打ちでもコンボになる。
 - {端} DI(壁), 前進, J.HK, 2HP, 強スピン, 弱ホーン, 強昇竜, LK, 前投げ
 - {端} DI(壁), 前進, J.HK, 2HP, 強スピン, 中ホーン, SA3
 
-### ラッシュ中下段の崩し
+### 弱スピンからラッシュ中下段の崩し
 
 （反撃設定 > ダウンリバーサル: 4F技）
 
