--- a/shared/cooking/recipes/スコーン.md
+++ b/shared/cooking/recipes/スコーン.md
@@ -1,3 +1,35 @@
+## 基本の材料
+
+- 薄力粉: 100g
+- ベーキングパウダー: 5g
+- 砂糖: 12g
+- バター: 30g
+- 塩: 0.5g
+- A:
+  - 牛乳: 30g
+  - 酢: 3g
+
+## 応用の材料
+
+チョコ:
+
+- チョコチャンク（チョコを角切りにしたもの）: 25g
+
+抹茶:
+
+- 抹茶: 3g
+
+## 手順
+
+1. Aを先に混ぜておく
+2. バター、薄力粉、砂糖、塩、ベーキングパウダーを混ぜ、全体がサラサラになるまでバターを細かくする
+3. Aを加えて、まとまるまで混ぜる
+4. ラップに包んで全体を押し固め、冷蔵庫で30分ほど冷やす
+5. 何度か折りたたんでから1cm程度の厚さに広げて切る
+6. クッキングシートに並べ、180℃に予熱したオーブンで18分ほど焼く
+
+## メモ
+
 バターはレンジで溶かしてしまってもいい、牛乳と混ぜてから粉と混ぜて、冷やす。
 マーガリンの方が楽ではある。
 
@@ -7,8 +39,6 @@
 生地は4回くらい折りたたんでから型で抜いたり切ったりすると空気を含んで食感が良くなる。
 
 チョコとか角切りにして入れてもいい。
-
-生地は薄めにして220度で10分。
 
 https://bacchetteepomodoro.com/ja/scones-2/?utm_source=rss&utm_medium=rss&utm_campaign=scones-2
 
@@ -25,18 +55,4 @@ https://youtu.be/LofcIMc1AZQ?si=wQZQJmHbOWGnwaiq
 
 スコーンは卵なしで砂糖の量を増やすと柔らかくなって潰れやすい。
 
-- 薄力粉: 100g
-- ベーキングパウダー: 5g
-- 砂糖: 10g
-- 無塩バター: 35g
-- 牛乳: 40g
-- 塩: 0.5g
-
-1. 薄力粉とベーキングパウダーをよく混ぜる
-2. バターを加えて、全体がサラサラになるまでバターを細かくする
-3. 砂糖、塩を加えて混ぜる
-4. 牛乳を混ぜて、水っぽさがなくなるまでざっくり混ぜる
-5. ラップに包んで全体を押し固める
-6. 冷蔵庫で30分ほど寝かせる
-7. 2cm程度の厚さに広げて切り分け、クッキングシートの上に並べる
-8. 180℃に予熱したオーブンで18分ほど焼く
+https://mi-journey.jp/foodie/94573/#choko
