--- a/shared/family/children/育児.md
+++ b/shared/family/children/育児.md
@@ -63,3 +63,7 @@ https://toyokeizai.net/articles/-/624086?page=2
 0-3歳の育児は特に甘やかさないといけない。頼み事はできるだけ受け入れる。愛情の基盤があれば、それ以降は多少厳しくしてもついてこれる。
 
 親が子どもの話をよく聞いて、その日にあったことや自分の考えを説明してもらうと、言葉にする能力が高まる。
+
+子どもが言葉で自己主張できるようになったら、泣き喚いたりする見苦しいコミュニケーションは無視しないといけない。
+
+人間も3-4歳になると犬猫くらいの知能になるので、ようやく本格的な躾が始められる。
