--- a/shared/game/情報を隠す.md
+++ b/shared/game/情報を隠す.md
@@ -4,3 +4,5 @@
 情報を隠し通すことは難しいので、完全に隠すというよりは、情報を探るためのコストを上げることを考える。
 
 嘘をつかなくても必要な情報を隠したら同じ。
+
+勝負などではコミュニケーションを抑えて情報を隠すことで優位に立つことがある。ただ、なんでも隠すとその戦闘には勝ててももっと大きな戦争で勝てなくなることがある。格ゲーで試合中の思惑は隠さないといけないけど、技術は隠さずに仲間内で共有した方が発展しやすい。技術の発展が勝率に繋がる。できるだけ情報を広く共有した方が技術や理論は発展しやすい。ただ、敵には隠した方がいいので、味方を見極めて共有する。
