--- a/shared/government/democracy/選挙.md
+++ b/shared/government/democracy/選挙.md
@@ -13,3 +13,5 @@
 
 ひろゆきの無効票、白票、無投票の解説
 https://youtube.com/shorts/YSz02nghgWo?si=QizE-f-v5S4iW0Is
+
+現行の体制に不満がなければ投票率は下がるし、現職がそのまま当選しやすい。投票に行かなくても現職に投票するようなもの。
