--- a/shared/help/恩.md
+++ b/shared/help/恩.md
@@ -32,3 +32,7 @@ favor を恩とする場合がある。
 恩があるのにそれを裏切った人は恩知らずと思われて、周りからも警戒される。
 
 恩は貸し借りに近い。
+
+恩があっても害があるなら切り捨てないといけない。残していいのは今後も貸し借りができる人だけ。
+
+親が子を産んだというのは過去の価値であって、今の価値ではない。
