--- a/shared/change/influence/people/説得.md
+++ b/shared/change/influence/people/説得.md
@@ -117,3 +117,5 @@ Assertion も参照。
 説得や納得とは行動が変わること。行動が変わらないと納得したとは言えない。
 
 交渉では納得できない場合もある。
+
+「地道に、こつこつ、一歩ずつ。…新しいものを認めさせるのに近道はないよ。自分の主張を通すにはまず相手をこちらへ招待するところからだ。奇抜なだけの人間として一瞬で消費されてしまわないためにもね。」『ブレス』
