--- a/shared/lifestyle/beauty/makeup/化粧.md
+++ b/shared/lifestyle/beauty/makeup/化粧.md
@@ -35,3 +35,7 @@ Maquillage (マキアージュ) はフランス語で化粧の意味。
 褒めるなら「化粧が上手い」か「化粧すると美人だけど素顔は可愛い」のように褒める。
 
 顔半分だけ化粧して比べてみるとか。
+
+「メイクって、世界で一番軽い鎧だ」『ブレス』
+
+化粧の基本はまずスキンケアが8割。
