--- a/shared/computer/science/machine/learning/訓練.md
+++ b/shared/computer/science/machine/learning/訓練.md
@@ -9,3 +9,7 @@
 試練よりも早く慣れるための正しい訓練は試練よりもしんどい。でも効率的。
 
 訓練は密度が大事。試練本番よりも高い密度で上手くならないと訓練の意味がない。
+
+先の見えない訓練はつまらない。試練を見据えて実践的な訓練を行うと楽しくなる。
+
+訓練は手段でしかない。試練が必要。
