--- a/shared/devotion/情熱.md
+++ b/shared/devotion/情熱.md
@@ -31,3 +31,5 @@ Passive と同じ語源。
 情熱は執着。どうしてもそれしかない、と言う感覚。
 
 やるべき事をやるだけではなく、やれると思ったことをやる。最善を尽くす。
+
+「夏生君は甲子園へ「行きたい」とは言わなかった。あの子は「行きます」…と断言したんです。言葉の裏に「行く」ための日々の積み重ねがきっとあるはず…。「行く」と決めている人は必ず何かを持っています。「決意」というものは一分一秒を無駄にしない。」『天のプラタナス』
