--- a/shared/engagement/誇り.md
+++ b/shared/engagement/誇り.md
@@ -94,3 +94,5 @@
 エンゲージメントにビジネスの関係が加わった場合、まずビジネスが十分に成功していることが誇りにつながる。売り上げを上げて、世間に知られて、社員に高い給料を払わなければならない。
 
 期待を裏切らないことに誇りを持つ。
+
+誇りを得るためにはまず勝たなければならない。まずは自分たちのやってきたことが正解だったと思える一勝が誇りにつながる。
