--- a/shared/voice/training/tips/喉を下げる.md
+++ b/shared/voice/training/tips/喉を下げる.md
@@ -181,3 +181,5 @@ https://youtube.com/watch?v=qXy2Sq8KmJA&si=0HkdEqvTfdu2eCTI
 声帯で音を鳴らすことと喉を下げることは分ける。喉を上げて子どもっぽい声で歌うのも一つの表現。
 
 声帯に力を入れるよりは、喉が上がる方がマシ。ただ、声帯を柔らかく、喉を下げられるとなおいい。
+
+単純に喉を下げると曲によっては声が太すぎる場合もある。細く歌う場合はある程度息を漏らすか、息を減らすか、仮声帯を使って少し不安定に歌うか。
