--- a/shared/lifestyle/housing/家.md
+++ b/shared/lifestyle/housing/家.md
@@ -48,3 +48,5 @@
 床と床に落ちたものが同じ色で見えなくなる場合は、違う色のテープとか貼っておくと見つけやすい。
 
 女性なんかは防犯ガラスの窓の家を重視するのもいいかも。
+
+日本の家は、夏に暑いより冬に寒い方がマシ。冬は布団に入ればなんとかなる。現代では冷房があるけど、それも電気代が高いし。
