--- a/shared/music/vocal/training/tips/キーを変えて歌う.md
+++ b/shared/music/vocal/training/tips/キーを変えて歌う.md
@@ -68,3 +68,5 @@ https://note.com/atano/n/n3c01c44d8bae
 キーはテンション。テンションが高い曲はキーを下げられない。
 
 キーは歌いやすいところに合わせるだけでなく、あえて2つ高めにしてテンションを高めにしたりすると印象が変わる。
+
+新しく覚えた曲はまず原キーから。リズムとメロディを覚えてからキーを変える。
