--- a/games/Street-Fighter/Six/theory/差し合いの基本.md
+++ b/games/Street-Fighter/Six/theory/差し合いの基本.md
@@ -160,3 +160,5 @@
 このどれか一つが欠けているなら、ひたすら弱点をつく。
 
 こちらが踏み込むからこそ相手も牽制技を振ってくる。そうなったら次は差し返しを狙う。そしたら今度は相手が踏み込んでくる。この読み合いの繰り返し。
+
+牽制技は狙って置かないといけない。相手が下がっているのに置いたら差し返される。まずは差し込みと差し返しだけで差し合いするのが基本。
