--- a/shared/music/vocal/training/tips/歌に抑揚をつける.md
+++ b/shared/music/vocal/training/tips/歌に抑揚をつける.md
@@ -115,3 +115,5 @@ https://youtu.be/ossqU_PajA4?si=_qLcHlHCXEOZgNOk
 通常は高い音が強くなるけど、男性が女性曲を歌ったりして適正音域より高いとずっと強いままになって抑揚がなくなる。そういうときはあえて裏声を混ぜるなどして抑揚をつけてもいい。ただ、鍛えて最大の息でなくても高音が出るようになると小細工はなくてもいい。
 
 抑揚をつけるには、ちゃんと言葉を切る、間を取るのが重要。
+
+すいちゃんはメロを裏声というか強いウィスパーボイスで歌う感じ。
