--- a/shared/communication/media/language/languages/english/tips/冠詞の使い分け.md
+++ b/shared/communication/media/language/languages/english/tips/冠詞の使い分け.md
@@ -1,1 +1,3 @@
 https://youtube.com/watch?v=FC7UlFQibq8&si=BKabCKUmAWed5wYW
+
+英語の冠詞は「あれ」「それ」が近いのかも。"This is a pen." を日本語で言うと「これはあれだ、ペンだ」みたいな。日本語だとちょっと言葉に詰まった感じ。でも英語では常に冠詞をつける。”This is a…”みたいにpenが出てこない場合はaで止まる。
