--- a/shared/music/vocal/training/歌のうまさ.md
+++ b/shared/music/vocal/training/歌のうまさ.md
@@ -53,3 +53,5 @@ https://youtu.be/6Tp-eguoPJI?si=SNx252totGgfY4LU
 
 響きや音の変化の滑らかさというのはレガートであること。
 その上で必要に応じてスタッカートにする。
+
+曲の精度を上げるにはまずリズムから。80くらいのテンポに落としてメトロノームでテンポをとりながら正確に練習する。あとは滑舌でテンポに追いつけなくなることもあるので、元のテンポで口が回らないところは重点的に練習する。リズムを正確にとりつつ、表現として走りや溜めの位置も検討する。
