--- a/shared/science/神秘.md
+++ b/shared/science/神秘.md
@@ -1,5 +1,9 @@
 # 神秘
 
+Mystery, Miracle.
+
+奇跡。
+
 神秘主義、オカルト、奇跡、といったものは「科学でない」もの。
 つまり、検証できず、反証できず、手が届かない。
 
@@ -93,3 +97,5 @@ https://twitter.com/zunzun428/status/1717374493554028880
 （『Kanon』）
 
 神秘主義や反科学というのは、つまり再現性がないということ。
+
+奇跡や神秘とは偶然の言い換えに過ぎない。
