--- a/shared/study/学問.md
+++ b/shared/study/学問.md
@@ -12,3 +12,6 @@
 科学は理や法則を考える。前後関係、因果関係を考える。どうしてそうなる、どうなる、に答える。実験を元にしたロジックが中心。
 数学は数を考える。いくらか、いくつか、に答える。
 歴史は世の中のことやその決定の経緯を考える。どうしてそうなった、に答える。どういう人が関わっていって、どういう出来事があったか、を考える。ストーリーが中心。
+
+学際的アプローチ
+複数の学術分野の専門家を結集して研究を行うこと。
