--- a/shared/commerce/sales/顧客対応.md
+++ b/shared/commerce/sales/顧客対応.md
@@ -9,3 +9,5 @@
 誰かの要望に対処したり、クレームに対応したりする受託のスキルは分けて考えた方がいいのかも。不満の解消に近い。クレームとして発した言葉が不満の根幹とは限らない。
 
 店員が何か落とした時に「失礼しました」とか言うと顧客に安心感を与えられる。
+
+クレームは「担当部署にお繋ぎいたしますね」で高額請求のナビダイヤルに投げるといい。
