--- a/shared/commerce/支払い.md
+++ b/shared/commerce/支払い.md
@@ -3,3 +3,5 @@
 セルフレジよりもまずは読み取りを早くしてレジの回転を早くする方がいい。
 セルフレジは不正もできるし、別に回転も早くないし。たくさん設置できるのが強みではある。
 大きなスーパーとかはセルフレジでないと店員を減らせない。
+
+ホテルなどは宿泊費と別に預かり金を受け取って、チェックアウトで問題ない場合にだけ返す、という料金制度も考えられる。特に外国人観光客とか信用度が低い場合は高くすることもできる。
