--- a/shared/collaboration/organization/組織の文化.md
+++ b/shared/collaboration/organization/組織の文化.md
@@ -10,3 +10,5 @@
 パフォーマンスは低いけど、セキュリティを高めている。
 
 初代君主は統治制度を整えて二代目に引き継がないと長続きしない。
+
+組織の哲学、コンセプト、ビジョン、などが同じ概念を指しているが、本質としては文化や習慣だ。普段からどのように振る舞っているか、それだけでしかない。言葉だけでは意味がないけど、言葉で伝えて態度で示して広まっていくものでもある。
