--- a/shared/music/vocal/training/ボーカルトレーニング.md
+++ b/shared/music/vocal/training/ボーカルトレーニング.md
@@ -145,3 +145,5 @@ https://youtu.be/L1SH1cRTOuM?si=bL92URDh81zOJCyM
 ただ、それだけでは人を感動させる歌声にはならない。音楽も学ぶ。
 
 歌を極めるなら、演劇とか、声に思考や感情を乗せることについても理解するべき。
+
+テンポを落としてメトロノームで正確にテンポをとりながら歌うのもいい練習になる。
