--- a/shared/government/難民.md
+++ b/shared/government/難民.md
@@ -5,3 +5,7 @@
 難民を助けるのは国民のための治安維持と他国との外交のためでしかない。それ以上に政府が難民に支援してはいけない。
 
 不法滞在している難民と正式な手続きを踏んだ移民は違う。
+
+自分の国があるのに帰れないのは犯罪者だからだ。
+
+移民が「我々は脅威にならない」と言っても、口では何とでも言える。さらに何もしなかったとしても、信頼を得られなければ脅威は払拭されない。移民が信頼を得るには、国民に同化しなければならない。信頼を得るだけでは足りない。必要なのは民族的に同化することだけ。それが嫌なら自分の国に帰ればいい。帰れないのはその国でも犯罪者だからだ。
