--- a/shared/trust/creditability/信用.md
+++ b/shared/trust/creditability/信用.md
@@ -123,3 +123,6 @@
 組織の上位に位置する人間を本当の意味で信用してはいけない。私的な関係を優先するか、組織の利益を優先するかわからない。
 
 弱者は信用できない。生きるので精一杯。
+
+> どん底に落ちたら、何も考えない。耳を塞いで頭も使わない。信用できる人間をただ頼りきればいい。
+> ただ、信用できる人間はその前に決めておかないといけない。どん底に落ちてから信用できる人間を探しても遅い。
