--- a/shared/culture/伝統.md
+++ b/shared/culture/伝統.md
@@ -9,3 +9,5 @@
 
 歴史があるものは多くの人々に支えられているものだが、歴史があるから良いのではない。
 良いものだから続けられるべきで、害になったら捨てるべきだ。
+
+新しく生まれた文化をその時限りの「流行」として終わらせるのか、長く続く「伝統」として残すのかは、その組織にとって重要な判断になる。雑に全てを流行として終わらせていいわけではない。上司は常に広く見て、残すべき文化が生まれたら保護しないといけない。
