--- a/shared/decision/意思.md
+++ b/shared/decision/意思.md
@@ -75,3 +75,5 @@
 関心、責任、自由、理由、のあたりも関連がある。
 
 意志が固いと柔軟性がないので、意志が柔らかいのもそれはそれで適所がある。
+
+何らかの判断がまずあって、その主体を仮に「意思」と呼んでいるだけ。そこに「意思」がある、と言っているのは人間だけ。だから意思などあってもなくてもどっちでもいい。
