--- a/shared/life/自死.md
+++ b/shared/life/自死.md
@@ -14,3 +14,7 @@
 大切なものを失って「後を追いたい」と願うのは、それが自分の中に何も残してないと言っているのに等しい。
 
 「死にたいのではなく、生きるのに疲れていた」
+
+自死は別に馬とかもするし自由でもなんでもない。家畜にもできる程度のことだ。カタツムリが寄生虫にやられて鳥に食われやすいところに移動するのも同じだし。
+
+人はいつか死ぬ。それを単に早めるだけの自死は自然の一部でしかない。自由とは、自然には手に入らないものを言う。
