--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -122,3 +122,5 @@ Lose-WinをLose-Loseに持ち込む。
 「勝てなきゃ、死ぬ…。勝てば…生きる。」
 「戦わなければ、勝てない。戦え。戦え。」
 『進撃の巨人』
+
+「互いに曲げられぬ信念がある限り、オレ達は衝突する。オレ達がやることはただ一つ。戦え。」『進撃の巨人』
