--- a/shared/war/武力.md
+++ b/shared/war/武力.md
@@ -1,3 +1,7 @@
+抑止力。
+
+他人から奪う害虫が一人でもいれば、その害虫を殺して守る農夫も必要になる。
+
 核武装の目的は大量報復による抑止力であって、ドローンやミサイルが出てきた現代では効率が悪い。大量報復ならもっと効率のいい手段がたくさんある。
 
 武力は抑止力であるべきだ。
@@ -28,3 +32,5 @@
 「最悪、殺せばいい。」と思って人と接する。
 
 武力は身を守るためにある。
+
+「躊躇えば仲間が死ぬ」『進撃の巨人』
