--- a/shared/education/mentoring/指導.md
+++ b/shared/education/mentoring/指導.md
@@ -107,3 +107,5 @@ achievement と関連。
 「どうしたらわからない」人に対して、「どうやって練習したらいいか」を具体的に教えられるのが指導。
 
 師弟関係や先輩・後輩の関係。背中を見て育つ。
+
+指導はまず小手先のテクニックでもなんでもいいので、上達する楽しみを教える。小さな成功体験がまず必要。それから、時間のかかる矯正を始める。
