--- a/shared/entertainment/examples/配信.md
+++ b/shared/entertainment/examples/配信.md
@@ -16,3 +16,5 @@
 本当はホロスタからも出してバランスを取ればいいんだろうけど、ホロスタに集客力がない。
 
 配信はまずアーカイブ残らないやつが優先度高い。
+
+スパチャ読みとか、配信の元の趣旨と違うパートは枠を分けたほうがいい。特に巻き戻しできない設定の場合、早く終われば途中から見に来た人も見返せるし。
