--- a/shared/gift/返報性.md
+++ b/shared/gift/返報性.md
@@ -44,3 +44,10 @@
 
 一方的に贈られるのは子ども扱いされている。
 子ども扱いされたくないなら、こちらも何か贈らないといけない。
+
+殺意には殺意を返す。
+
+礼儀がわからなくても、敬意に敬意を返すことはできる。
+
+礼には礼を、無礼には無礼を返す。
+まずは一般的な礼儀を知らないと返せない。
