--- a/shared/voice/training/tips/声色を変える.md
+++ b/shared/voice/training/tips/声色を変える.md
@@ -158,3 +158,5 @@ https://youtube.com/watch?v=XWGCrPW6e-M&si=zPTuAuo2jKXU7pQ7
 
 ロボ子さんの声は少し鼻にかかってて、息が強く太く、息漏れが多い。あと喉が狭そう。
 真似しようとすると普通は高い声が出ない。
+
+浴槽とネオンテトラはヤンデレの歌なので、色っぽく、嗜虐的なイメージ。
