--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -124,3 +124,8 @@ Lose-WinをLose-Loseに持ち込む。
 『進撃の巨人』
 
 「互いに曲げられぬ信念がある限り、オレ達は衝突する。オレ達がやることはただ一つ。戦え。」『進撃の巨人』
+
+勝てない獣に手を出して返り討ちに遭ったからといって復讐しにいくのか、回避するのかは自分が選べる。自然災害のようなものだ。
+
+「勝てない相手に不用意に手を出した。それだけ。」
+『狂戦士なモブ』
