--- a/shared/voice/training/tips/喉を下げる.md
+++ b/shared/voice/training/tips/喉を下げる.md
@@ -183,3 +183,8 @@ https://youtube.com/watch?v=qXy2Sq8KmJA&si=0HkdEqvTfdu2eCTI
 声帯に力を入れるよりは、喉が上がる方がマシ。ただ、声帯を柔らかく、喉を下げられるとなおいい。
 
 単純に喉を下げると曲によっては声が太すぎる場合もある。細く歌う場合はある程度息を漏らすか、息を減らすか、仮声帯を使って少し不安定に歌うか。
+
+喉は息を吐くというよりむしろ息を抑えて、腹で息を吐く。そして横隔膜を広げる。
+
+喉を下げるよりもまず腹から声を出すことを意識する。腹から声を出さないと喉で締めて息を強くしてしまう。
+腹から声を出すと喉を下げて低い位置で息を受け止めたほうが自然で楽。
