--- a/shared/decision/information/情報を絞る.md
+++ b/shared/decision/information/情報を絞る.md
@@ -2,3 +2,5 @@
 
 まず整理する。ランダムにシャットアウトする手もある。
 例えば本を読むだけでも、文字がたくさんあるときついなら紙とかで直近の数行以外は隠すとか。
+
+真偽が怪しくても、もし本当だった時に重大なリスクがある情報を捨てるのは頭が悪い。怪しかったら自分で検証すればいいだけ。この場合、調査では足りないので、自分の手で検証しないといけない。
