--- a/shared/care/tips/相手を知る.md
+++ b/shared/care/tips/相手を知る.md
@@ -76,3 +76,5 @@
 - 仕事のモチベーション
 
 相手の価値観を探るためには、複数の価値観を使い分けられないといけない。自分の価値観で接客するのがダメというよりは、一つしかないのがダメ。複数あれば、一致する顧客も増える。
+
+自分が考えられる以上のことを他人が考えていても理解できない。他人の考えを理解するには、まず自分が考えないといけない。
