--- a/shared/decision/判断.md
+++ b/shared/decision/判断.md
@@ -1,4 +1,4 @@
-# Action
+# Decision
 
 行動を選ぶこと。
 
@@ -99,3 +99,5 @@ Know 知る
 
 判断を先延ばしにしたままなんとなく行動するのも間違っている。
 判断＝行動の良し悪しを後から検証できるようにする。結果ではなく、期待値で。
+
+殺せるか殺せないか。食えるか食えないか。まずはそれだけ判別できるのが大事。殺さずに生き餌にすることもある。
