--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -50,11 +50,17 @@
 
 - 6MP(+4), 2MP, 強アッパー: 2580
 - 6MP(+4), 2MP, 強ニー: 2420 41F
+- 6MP(+4), 2MP-HK, SA1: 3640
+- 6MP(+4), 2MP-HK, SA2: 4200
 - {端} 6MP(+4), 2MP, ODニー, 弱アッパー, SA3: 5240
 
 ## MK
 
 - MK-HK: 1500
+
+## 2MK(+4)
+
+- 2MK(+4), 4HP, 強ニー, 弱アッパー: 2810
 
 ## HP
 
@@ -108,6 +114,10 @@ HKの2段目からは強ノヴァが繋がらない。
 
 - {空} 6HK(c), 強アッパー: 2520
 
+## {空} J.MP
+
+- {空} J.MP, 弱アッパー: 1800
+
 ## DI(pc)
 
 - DI(pc), ステップ, 4HP, 強アッパー-h: 3560
@@ -121,6 +131,10 @@ HKの2段目からは強ノヴァが繋がらない。
 - {端} 中ショット, 強ショット: 1400
 - 中ショット, SA1: 2900
 
+## {端} 弱ニー(+10)
+
+- 弱ニー(+10), 弱アッパー: 1680
+
 ## {端} 中ニー(+7)
 
 - {端} 中ニー(+7), 弱アッパー: 1880
@@ -128,6 +142,10 @@ HKの2段目からは強ノヴァが繋がらない。
 ## {端} 中ニー(+10)
 
 - {端} 中ニー(+10), ODアッパー: 2280
+
+## {端} 強ニー(+5)
+
+- {端} 強ニー(+5), 弱アッパー: 2000
 
 ## 弱/中ネクサス
 
