--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -10,6 +10,10 @@
 
 - {端} 強ニー(+10): ガードされて+5、投げ間合いの外
 
+## 4HP, 強ニー, 弱アッパー: 34
+
+- DR 6MP(+2): 中央では少し遠めだが2MPが繋がる
+
 ## 2HK(pc): 45
 
 - ステップ, 6MP(+1)
@@ -61,6 +65,9 @@
 
 ## 中/強アッパー: 27
 
+- {中央} 中ショット: その場受け身に重なる
+  - {後方受け身, ガード}, 強ショット
+  - {後方受け身, 前方ジャンプ}, 中アッパー: 対空が間に合う
 - {端} ステップ: +4
 
 ## {端} 弱ニー: 36
