--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -1,27 +1,57 @@
-## 飛び道具
+## 初級
 
-- 強ショット
-- 前進, 中ショット, 強ショット
+### ジャンプ攻撃
+
+- J.HP/DR MP, 4HP, 強ニー, 弱アッパー, SA3
+
+### 飛び道具
+
+- 前進, 強ショット, ガード
+- 前進, 中ショット, 強ショット, ガード
 
 アッパーが漏れないようにする。
 
 ショットがコンボになる距離を覚える。
 
-## 対空
+### 対空
 
 （対空練習）
 
-- 4HP(c), 強アッパー-h, 強ショット
+- 弱アッパー
+  - DR MP, ...
+  - DR 前投げ, ...
+- 4HP(c), 強アッパー-h
+  - 中ショット, 強ショット, ガード
 
-## インパクト返しのコンボ
+弱アッパーはMPをブンブン振って、余裕がない時に狙う。
+4HPは余裕がある時に狙う。
+
+### インパクト返しのコンボ
+
+（ドライブインパクトへの対応練習）
 
 - DI(pc), ステップ, 4HP, 強アッパー-h
+  - 中ショット, 強ショット, ガード
 
-## ジャンプ攻撃
+### 壁インパクトのコンボ
 
-- J.HP
+- DI(壁), 4HP, 中ニー, 中アッパー
 
-## MKのヒット確認
+## 上級
+
+### 中央のアッパーからの攻め
+
+（ダウンリバーサル: 前方ジャンプ/何もしない）
+（ガードリバーサル: 前方ジャンプ/何もしない）
+（ダメージ復帰リバーサル: 前方ジャンプ/何もしない）
+
+- 2LP/2LK, LP, 中アッパー
+  - 中ショット, {後方受け身, 前方ジャンプ}, 中アッパー
+  - 中ショット, {後方受け身, 何もしない}, 強ショット
+
+## その他
+
+### MKのヒット確認
 
 - MK(h)-HK
   - 強ニー(+9)(h)
