--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -70,6 +70,12 @@
   - {後方受け身, 前方ジャンプ}, 中アッパー: 対空が間に合う
 - {端} ステップ: +4
 
+## 強アッパー-h: 23
+
+- 中ショット
+
+演出が入って中央でも端でも同じ状況になるので攻めやすい。
+
 ## {端} 弱ニー: 36
 
 - 強ニー(+7): ガードでも+2で投げ間合い
