--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -1,25 +1,35 @@
+## 共通設定
+
+（ダミー設定 > ガード: ランダム）
+（ダミー設定 > 起き上がり: 後方受け身）
+
 ## 初級
 
 ### ジャンプ攻撃
 
 - J.HP/DR MP, 4HP, 強ニー, 弱アッパー, SA3
 
-### 飛び道具
+### 飛び道具と対空
+
+（ダミー設定 > 起き上がり: ランダム）
+（反撃設定 > ダウンリバーサル: 前方ジャンプ/何もしない）
+（反撃設定 > ガードリバーサル: 前方ジャンプ/何もしない）
+（反撃設定 > ダメージ復帰リバーサル: 前方ジャンプ/何もしない）
 
 - 前進, 強ショット, ガード
 - 前進, 中ショット, 強ショット, ガード
+- {ジャンプ}, 中アッパー, 中ショット
 
-アッパーが漏れないようにする。
+前進からショットでアッパーが漏れないようにする。
 
-ショットがコンボになる距離を覚える。
+中強ショットがコンボになる距離を覚える。
 
-### 対空
+ジャンプは対空する。
+
+### 高い対空
 
 （対空練習）
 
-- 弱アッパー
-  - DR MP, ...
-  - DR 前投げ, ...
 - 4HP(c), 強アッパー-h
   - 中ショット, 強ショット, ガード
 
@@ -36,18 +46,6 @@
 ### 壁インパクトのコンボ
 
 - DI(壁), 4HP, 中ニー, 中アッパー
-
-## 上級
-
-### 中央のアッパーからの攻め
-
-（ダウンリバーサル: 前方ジャンプ/何もしない）
-（ガードリバーサル: 前方ジャンプ/何もしない）
-（ダメージ復帰リバーサル: 前方ジャンプ/何もしない）
-
-- 2LP/2LK, LP, 中アッパー
-  - 中ショット, {後方受け身, 前方ジャンプ}, 中アッパー
-  - 中ショット, {後方受け身, 何もしない}, 強ショット
 
 ## その他
 
