--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -17,6 +17,10 @@
 - 6LK(c), LP, 中アッパー: 1890
 - 6LK(c), LP, ODアッパー: 2010
 
+## 6LK(pc)
+
+- 6LK(pc), 2MP-HK, SA1: 2960
+
 ## MP
 
 - MP, LP/2LP, 強アッパー: 2020
@@ -77,7 +81,7 @@
 
 ## {空} 4HP
 
-- {空} 4HP(c), 強アッパー-h: 3240
+- {空} 4HP, 強アッパー-h: 3120 (4HP 2ヒットで3320)
 
 ## HK(1)
 
@@ -185,3 +189,5 @@ HKの2段目からは強ノヴァが繋がらない。
 - 弱ネクサス(c)-マイト, SA2
 - 弱ネクサス(c)-マイト, 中アッパー, SA3
 - 弱ネクサス(c)-マイト, 中アッパー
+
+- HK(相打ち), HK, 強ネクサス
