--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -2,6 +2,13 @@
 
 投げ間合いの外。
 
+## DR MP(g): 6
+
+- MP(g): 連続ガード
+  - MP, LP, 弱ショット: 無敵技以外で割り込めない、大足の外まで離して-7
+  - MP, LP, 弱ニー: 無敵技以外で割り込めない、立ちで-3、しゃがみで+2
+- MP, MP, LP,
+
 ## MK-HK: 38
 
 - 強ニー(+9): ガードされて+4、端かその場受け身には投げ間合い
@@ -16,8 +23,12 @@
 
 ## 2HK(pc): 45
 
-- ステップ, 6MP(+1)
+- ステップ, 6MP(+1): ヒットで2LP, LPが入る、ガードで-1
 - 弱ニー: +3
+
+## {空} 6HK: 47-50
+
+- DR: 目押しでなんでも重なる
 
 ## 前投げ: 21
 
@@ -37,11 +48,18 @@
 弱/中ネクサスはガードされて-5だが発生が早い、強/ODはガードされて-3だが発生が遅い。
 2MP/2HP/4HP/HKからは中ネクサスまで無敵技以外で割り込めない。
 
-## ネクサス(g): -5
+## 弱/中ネクサス(g): -5
 
 - マイト: 暴れ潰し
 - グリード: 4F遅れ、しゃがみに当たらない、インパクトを返せる
 - ノヴァ: 9F遅れ
+
+## 強/ODネクサス(g): -3
+
+- マイト: 中段、無敵技以外で割り込めない、インパクトを返せる
+- グリード: しゃがみに当たらない、無敵技以外で割り込めない、インパクトを返せる
+- ノヴァ: 7F遅れ
+- ガード: 投げ間合い
 
 ## マイト: 3
 
@@ -50,6 +68,10 @@
 ## {立} グリード(g): 4
 
 投げ間合い。
+
+## {立} グリード(c): 25
+
+- 中ニー(+8): ガードされて+1の投げ間合い
 
 ## ノヴァ, 弱ニー: 42
 
@@ -81,6 +103,13 @@
 - 強ニー(+7): ガードでも+2で投げ間合い
 - 2MP, 2MK(+2): ガードで五分、ヒットで+6
 
+## {屈} 弱ニー(+10): 2
+
+投げ間合いの外。
+ニーの下りが当たる間合いで相手がしゃがんでいると持続当てになる。立っていると-3で投げ間合い。
+
+- 2LP/2LK, LP, 弱ニー
+
 ## 中ニー: 39
 
 ## 中ニー(+7)(g): 0-3
@@ -90,5 +119,8 @@
 ## 強ニー: 41
 
 ## 強ニー(+13)(g): 0-5
+
+鈍い音がしたら早めに当たっている。
+軽い音がしたら持続当てになっていて有利。
 
 距離で持続当てにした場合、+2までは投げ間合い。
