--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -1,3 +1,10 @@
+## 2LP/2LK, 2LP
+
+- ...(g), LP, 弱ショット: 暴れを潰して、ガードされても-5で差し合いに戻る、ジャンプには空中ヒット
+- ...(g), LP, 弱ニー: ニーの下りを当てる、立ちガードされて-1の投げ間合い、弱攻撃と相打ち
+- ...(g), LP, 中ニー: ニーの下りを当てる、立ちガードされて-3の投げ間合い、弱攻撃の外から当たる
+- {立} ...(g), LP, 中ショット, 弱ニー: ニーを警戒して立っていると当たる、長いしゃがみ攻撃に負ける
+
 ## MP: 3-8
 
 ## DR 2MK: 17-21
