--- a/games/Street-Fighter/Six/characters/Sagat/サガットの特徴.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの特徴.md
@@ -9,9 +9,10 @@
 - {立} 6HK: 4F
 - {立} グリード(中派生): 4F
 - ノヴァ(強派生): 2F
-- 弱ニー(+8): 0-2F
-- 中ニー(+7): 0-3F
+- 弱ニー(+8): 0-2F (相手がしゃがんでいると+10になりやすい)
+- 中ニー(+7): 0-3F (相手がしゃがんでいると+9になりやすい)
 - 強ニー(+5): 0-5F
+- {屈} 強ニー: 4F
 
 ## ガードされて確反
 
