--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -1,24 +1,50 @@
+## 総合
+
+相手をBOさせるのが強い。
+無理に近づいて崩すよりもゲージを削る。
+
 ## 差し合い
 
+まずは通常技と中ニーが基本。
+ニーはしゃがんでいると持続当てになってガードされても有利になる。
+相手がニーを嫌って立つようなら6LKやHK、中/強ショットが当たりやすくなる。
+
 強ショットは発生12Fで弾速もあるので見てから飛ぶのは難しい。
-基本的には強ショットと中/強ニーを軸にする。
+立っていないと当たらないので、ニーで揺さぶって読み合いにする。
+
+相手が立っていると強い中/強ショット、ステローと、相手がしゃがんでいると強い中ニーで中・遠距離を制圧する。
 
 相手が下がるなら無理に上がらなくていい。ショットとニーで十分。
 
 基本的には強ニーが先端当てになり、中強ショットがコンボになる遠めの距離が強い。最遠距離から一歩前くらい。
 端では中強ショットの距離が近くなるので、中ニー先端当ての距離を維持する。
 
-## 差し込み
+## 差し込みの選択肢
+
+- LP/LK, 弱ショット: 無敵技以外で割り込めない、先端ならガードされても-6くらいで大足の外
+- LP/LK, 弱ニー: 無敵技以外で割り込めない、先端ならガードされても-2くらいで大足の外
+- {端} ODニー: ガードされて-2の投げ間合い
+- 2HP, 弱ショット: 先端ならガードされても連続ガードの-5くらいで大足の外、インパクトを返しやすい
+- 2HP, 中ニー: 先端なら立ちガードされても-2の投げ間合い、しゃがみなら+2で投げ間合い
+- MK: ヒット確認でTCから状況が良い、インパクトに弱い
+- 2HK: 下段、確反あり
+- 6LK: 下段、カウンターでコンボ
+- 中ニー: 遠めなら確反がない、しゃがんでいるとガードされても+2で投げ間合い
+- 強ショット: 速い弾
+- 中ショット, 強ショット: 2MP先端キャンセルくらいの距離でもジャンプできない
 
 まずは強ショットが基本で、たまに中ショットで緩急をつける。
 それ以外は距離によって使い分ける。
 
-1. 2LP
-2. LP
-3. 2MP
-4. MK
+## 牽制の選択肢
 
-## 差し返し
+- MP: 全体24F、中/強ショットとモーションが似ていてフェイントになる
+- 2MP, 中ネクサス: 全体26F
+
+## 差し返しの選択肢
+
+- 2HK
+- LK(pc), 強アッパー
 
 差し返しは2HK一本でもいい。
 2MPもあるけど足払いに当たりづらいし。
