--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -26,15 +26,14 @@
 
 ジャンプは対空する。
 
-### 高い対空
+### リターンの高い対空
 
 （対空練習）
 
 - 4HP(c), 強アッパー-h
   - 中ショット, 強ショット, ガード
 
-弱アッパーはMPをブンブン振って、余裕がない時に狙う。
-4HPは余裕がある時に狙う。
+自分が技を出してない時に狙う、リターンの高い対空。
 
 ### インパクト返しのコンボ
 
