--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -5,9 +5,10 @@
 
 ## 初級
 
-### ジャンプ攻撃
+### ジャンプ・ラッシュ攻撃
 
-- J.HP/DR MP, 4HP, 強ニー, 弱アッパー, SA3
+- J.HP/DR MP(h), 4HP, 強ニー, 弱アッパー, SA3
+- J.HP/DR MP(g), MP, 2LP, 弱ショット, ガード
 
 ### 飛び道具と対空
 
@@ -46,7 +47,23 @@
 
 - DI(壁), 4HP, 中ニー, 中アッパー
 
+### ラッシュ下段 1
+
+- DR 2MK, MP(h), LP, 中アッパー, SA3
+- DR 2MK, MP(g), LP, 弱ショット, ガード
+
 ## その他
+
+### ラッシュ中段
+
+- DR 6MP, 2MP, 強ニー
+
+### ラッシュ下段 2
+
+- DR 2MK(h), 4HP, 強ニー, 弱アッパー, SA3
+- DR 2MK(g)
+  - MP(h), LP, 中アッパー, SA3
+  - MP(g), LP, 弱ショット, ガード
 
 ### MKのヒット確認
 
