--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -32,11 +32,24 @@
 - MP(+2), 4HP, 強ニー, 弱アッパー: 3210 34F
 - MP(+2), 4HP, 強ニー, ODアッパー: 3560
 
+## {Dリバ} MP(pc)
+
+- MP(pc), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h: 3568
+- {端} MP(pc), HK(1), 強ノヴァ, 4HP, 強アッパー-h: 3700
+- {端} MP(pc), HK, ODノヴァ, 4HP, 強アッパー-h: 4000
+
 ## 2MP
 
-- 2MP-HK, SA1: 3360
-- 2MP-HK, SA2: 4000
-- 2MP-HK, SA3: 4800
+- 2MP, 強ニー: 2000
+- 2MP, 中マイト: 1740
+- {端立} 2MP, OD上ショット, 6HK, 中アッパー: 3000
+- {端} 2MP, ODニー, 弱アッパー: 2970
+- {端} 2MP, CR HK, 強ノヴァ, 4HP, 強アッパー-h: 3381
+- 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h: 3465
+- 2MP, CR HK, 強ノヴァ, 6HK, SA1: 3215
+- 2MP, CR HK, 強ノヴァ, 6HK, SA2:
+- 2MP, CR HK, 強ノヴァ, 強アッパー, SA3: 4849
+- 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5125
 
 ## 2MP(pc)
 
@@ -46,6 +59,14 @@
 - {立端} 2MP(pc)-HP, 中グリード, ODアッパー: 3220
 - {端} 2MP(pc)-HP, ODニー, ODアッパー: 3560
 
+## 2MP-HK
+
+- 2MP-HK, SA1: 3360
+- 2MP-HK, SA2: 4000
+- 2MP-HK, SA3: 4800
+
+ヒット確認できるならSA1/2はTCから直接の方が高い。
+
 ## 6MP(+1)
 
 - 6MP(+1), 2LP, 中アッパー: 2120
@@ -54,6 +75,8 @@
 
 - 6MP(+4), 2MP, 強アッパー: 2580
 - 6MP(+4), 2MP, 強ニー: 2420 41F
+- {端} 6MP(+4), 2MP, ODニー, 弱アッパー: 3240
+- {端} 6MP(+4), 2MP, ODニー, ODアッパー: 3540
 - 6MP(+4), 2MP-HK, SA1: 3640
 - 6MP(+4), 2MP-HK, SA2: 4200
 - {端} 6MP(+4), 2MP, ODニー, 弱アッパー, SA3: 5240
@@ -64,7 +87,12 @@
 
 ## 2MK(+4)
 
+- 2MK(+4), 2MP, 強アッパー: 2200
+- 2MK(+4), 2MP, 中マイト: 1910
 - 2MK(+4), 4HP, 強ニー, 弱アッパー: 2810
+- {端} 2MK(+4), 4HP, 中ショット, DR 4HP, 強アッパー-h: 3314 (2MKが近すぎるとショットが当たらない)
+- 2MK(+4), 2MP-HK, SA1: 3100
+- 2MK(+4), 2MP-HK, SA2: 3580
 
 ## HP
 
@@ -74,6 +102,12 @@
 
 - 2HP, 強アッパー: 2400
 - 2HP, 強ニー: 2200
+- {端} 2HP, ODノヴァ, 4HP, 強アッパー-h: 3700
+- {端} 2HP, OD上ショット, 6HK, 中アッパー: 3200
+
+## 2HP(pc)
+
+- {端} 2HP(pc), 強ノヴァ, 4HP, 強アッパー-h: 3684
 
 ## 4HP(pc)
 
@@ -86,11 +120,15 @@
 ## HK(1)
 
 - HK(1), 強ノヴァ, 強アッパー: 2360
+- {端} HK(1), 強ノヴァ, 4HP, 強アッパー-h: 2980
+
+HK(1), 強ノヴァは相手が空中でも使える。
 
 ## HK
 
 - HK, 強アッパー: 2180
 - HK, ODノヴァ, 強アッパー: 2660
+- {端} HK, ODノヴァ, 4HP, 強アッパー-h: 3280
 
 HKの2段目からは強ノヴァが繋がらない。
 
@@ -108,11 +146,18 @@ HKの2段目からは強ノヴァが繋がらない。
 - 6HK(pc), 6HK, 2MP-HK, SA1: 4200
 - 6HK(pc), 6HK, 2MP-HK, SA2: 4637
 - 6HK(pc), 4HP, 強ニー, 弱アッパー, SA3: 5610
-- 6HK(pc), HK, 強ノヴァ, 強アッパー, SA3: 5380
+- 6HK(pc), HK, DR 6HK, HK, DR 6HK, HK(1), 強ノヴァ, 4HP, 強ニー, 中アッパー, SA3: 6108
 
 ## {遠} 6HK(pc)
 
 遠いと4HPが届かない。
+
+- {端} 6HK(pc), HK, ODノヴァ, 4HP, 強アッパー-h: 4270
+
+## {空} 6HK
+
+- {端空} 6HK, 4HP, 強アッパー-h: 3680
+- {端空} 6HK, 4HP, 強アッパー-h, SA3: 5280
 
 ## {空} 6HK(c)
 
@@ -125,15 +170,27 @@ HKの2段目からは強ノヴァが繋がらない。
 ## DI(pc)
 
 - DI(pc), ステップ, 4HP, 強アッパー-h: 3560
+- DI(pc), ステップ, 4HP, 強ニー, SA2: 4310 4F
+- DI(pc), ステップ, 4HP, 強ニー, SA2-2: 4130 19F
+- DI(pc), ステップ, 4HP, 強ニー, SA2-6, DR 4HP, 強ニー, 中アッパー: 3882 (端から端まで運ぶ)
+- DI(pc), ステップ, 4HP, 強ニー, 中アッパー, SA3: 5350
 
 ## {端} DI(壁)
 
-- {端} DI, 4HP, 中ニー, 中アッパー: 2980 27F
+- {端} DI, 4HP, 強アッパー-h: 3400
+- {端} DI, 4HP, 中ニー, SA2: 3940
+- {端} DI, 4HP, 中ニー, 中アッパー, SA3: 4980
+
+4HPが届かなかったらDR 4HPにする。
 
 ## {遠} 中ショット
 
 - {端} 中ショット, 強ショット: 1400
 - 中ショット, SA1: 2900
+
+## {遠} ODショット
+
+- ODショット, SA1: 2560
 
 ## {端} 弱ニー(+10)
 
