--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -7,7 +7,11 @@
 - MP(g): 連続ガード
   - MP, LP, 弱ショット: 無敵技以外で割り込めない、大足の外まで離して-7
   - MP, LP, 弱ニー: 無敵技以外で割り込めない、立ちで-3、しゃがみで+2
-- MP, MP, LP,
+
+## 2MP-HK: 32
+
+- DR 6MP
+- 強ニー(+3): 立ちガードで-2、しゃがみガードで+4の投げ間合い、当たって+40
 
 ## MK-HK: 38
 
@@ -63,7 +67,7 @@
 
 ## マイト: 3
 
-投げ間合い。
+ド密着。
 
 ## {立} グリード(g): 4
 
@@ -78,6 +82,15 @@
 - J.MK: ガードで+10、2MK
 
 中央でも詐欺飛びが重なる。
+
+## ノヴァ, 6HK: 48
+
+- ステップ, 中ニー(+8)
+- ステップ 2回: +2
+
+## ノヴァ, DR 2MP-HP, 強ニー: 42
+
+- {端} J.HP: 詐欺飛びでガードされて+15
 
 ## ノヴァ(g): 2
 
@@ -124,3 +137,11 @@
 軽い音がしたら持続当てになっていて有利。
 
 距離で持続当てにした場合、+2までは投げ間合い。
+
+## SA2-2: 19
+
+補正40%なら180ダメージ減って、起き攻めできるようになる。リーサル以外ではこの派生にした方がいい。
+
+- 前進, 投げ
+
+## SA3: 15
