--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -7,6 +7,14 @@
 
 ## MP: 3-8
 
+- MP(c), 4HP, ...
+- MP(h), MP, LP, ...
+- MP(g)
+  - MP(h), LP, ...
+  - MP(g)
+    - 2MP, 弱ショット: 距離をとる
+    - 2HP: 弱攻撃を潰してパニカン
+
 ## DR 2MK: 17-21
 
 ## 6MP(+1): 22-23
