--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -21,8 +21,8 @@
 
 ## 差し込みの選択肢
 
-- LP/LK, 弱ショット: 無敵技以外で割り込めない、先端ならガードされても-6くらいで大足の外
-- LP/LK, 弱ニー: 無敵技以外で割り込めない、先端ならガードされても-2くらいで大足の外
+- 2MP, 弱ショット: 無敵技以外で割り込めない、先端ならガードされても-6くらいで大足の外
+- 2MP, 弱ニー: 無敵技以外で割り込めない、先端ならガードされても-2くらいで大足の外
 - {端} ODニー: ガードされて-2の投げ間合い
 - 2HP, 弱ショット: 先端ならガードされても連続ガードの-5くらいで大足の外、インパクトを返しやすい
 - 2HP, 中ニー: 先端なら立ちガードされても-2の投げ間合い、しゃがみなら+2で投げ間合い
@@ -35,6 +35,8 @@
 
 まずは強ショットが基本で、たまに中ショットで緩急をつける。
 それ以外は距離によって使い分ける。
+
+2MPよりLKの方が長いけど、2MPの方が判定が強いし火力も高いので踏み込んで当てる価値はある。
 
 ## 牽制の選択肢
 
